chore: added all endpoints

--- a/10xCards/appsettings.json
+++ b/10xCards/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "ThisIsAVerySecureSecretKeyForJWT_MinimumLength32Characters!",
+    "Issuer": "10xCards",
+    "Audience": "10xCards",
+    "ExpirationInMinutes": 10080
+  },
+  "OpenRouter": {
+    "ApiKey": ""
+  }
 }
