--- a/10xCards/appsettings.json
+++ b/10xCards/appsettings.json
@@ -1,16 +1,39 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ConnectionStrings": {
+    "Database": ""
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "SecretKey": "ThisIsAVerySecureSecretKeyForJWT_MinimumLength32Characters!",
+    "SecretKey": "",
     "Issuer": "10xCards",
     "Audience": "10xCards",
-    "ExpirationInMinutes": 10080
+    "ExpirationInMinutes": 480
+  },
+  "Properties": {
+    "Application": "10xCards.WebApp"
   },
   "OpenRouter": {
     "ApiKey": ""
