--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -36,7 +36,7 @@ jobs:
         run: dotnet format 10xCards.sln --verify-no-changes --verbosity diagnostic
 
       - name: Build solution
-        run: dotnet build 10xCards.sln --configuration Release --no-restore --warnaserror
+        run: dotnet build 10xCards.sln --configuration Release --no-restore
 
   unit-tests:
     name: Unit Tests
