--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,14 @@
 root = true
 
 [*]
+indent_style = space
+indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.{cs,razor}]
-indent_style = tab
+indent_style = space
 indent_size = 4
-tab_width = 4
 
 # C# formatting rules
 csharp_new_line_before_open_brace = none
