--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,7 +19,7 @@ env:
 jobs:
   lint:
     name: Lint Code
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
@@ -31,6 +31,9 @@ jobs:
 
       - name: Restore dependencies
         run: dotnet restore 10xCards.sln
+
+      - name: Check code formatting
+        run: dotnet format 10xCards.sln --verify-no-changes --verbosity diagnostic
 
       - name: Build solution
         run: dotnet build 10xCards.sln --configuration Release --no-restore
