--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -82,7 +82,7 @@ jobs:
 
   e2e-tests:
     name: E2E Tests
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: lint
     steps:
       - name: Checkout repository
